--- a/src/RazorSectionsLayouts/Properties/launchSettings.json
+++ b/src/RazorSectionsLayouts/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "AspNetCoreMvcHtmx": {
+    "RazorSectionsLayouts": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
